lighttpd/lighttpd-1.4.68/futag-fuzz-drivers/failed/ck_memclear_s/ck_memclear_s1/ck_memclear_s1.err
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/ck_memclear_s/ck_memclear_s1/ck_memclear_s1.c:15:10: error: variable has incomplete type 'void'
    void b__s;
         ^
1 error generated.
